New design introduced. Now the site stretches 100% width and 100% height. It should be considered max-height and max-width in order to handle properly the large monitors. Three column design enabled. 1-st column is intended to be for extra menu. 2-nd column is intended to be for contents and 3-rd column is intended to be for table of contents or other optional information. Please keep in mind that because of padding-bottom: xxxx and margin-bottom: -xxxx the toc doesn't work properly. We should figure it out. The padding/margin hack is used to align to 100% height the three columns.

--- a/trunk/core/www/sites/default/themes/solidopt/css/menu.css
+++ b/trunk/core/www/sites/default/themes/solidopt/css/menu.css
@@ -1,8 +1,8 @@
 ul.primary-links {
-	margin: 0;
+	margin: 36px 0 0 0;
 	bottom: 0;
-	right: 0;
-	position: absolute;
+	position: relative;
+	float: right;
 	padding: 10px 10px 0;
 	list-style: none;
 	
@@ -15,7 +15,7 @@ ul.primary-links {
 ul.primary-links li {
 	float: left;
 	background: url("images/menu-left.png") no-repeat left top;
-    margin: 0 1px 0 0;
+        margin: 0 1px 0 0;
 	padding: 0 0 0 13px;
 }
 
