--- a/trunk/core/www/sites/default/themes/solidopt/css/layout.css
+++ b/trunk/core/www/sites/default/themes/solidopt/css/layout.css
@@ -1,33 +1,51 @@
-body {
-    background: #112338 url("images/header-bar.png") repeat-x left 85px;
-    /*text-align: center;*/
-    margin: 0;
-}
+html, body {height:100%;}
 
-body.short {
-    background-image: url("images/header-bar-short.png") !important;
+body {
+    margin:0;
+    padding:0;   
+    background: #112338;
 }
+html>body #minHeight{ /* Opera and IE8 min-height fix */
+    float:left;
+    width:0;
+    height:100%;
+    overflow:hidden;
+} 
 
 img {
     border: none;
 }
 
+/*=== Begin Layout Structure ===*/
+
 #page {
     text-align: left;
     /*margin: 10px auto 0;*/
     padding: 0;
-    width: 980px !important;
+/*    width: 980px !important;*/
+    
+    height: 100%;
+    width: 100%;
 }
 
-* html #page { 
-    width: 980px;
-}
+#wrapper {
+    min-height:100%; /*height is determined from parent's height (html & body)*/
+    margin:0 auto;
 
-#header {
-    height: 90px;
+    overflow:hidden;/*contain inner floats*/
+}
+* html #wrapper {height:100%; overflow:visible;}/*IE6 min-height & overflow reset*/
+
+#topmost {
     position: relative;
+    float: right;
+    height: 20px;
+}
+
+#header{
+    height: 95px;
     margin: 0 0 0 10px;
-    padding: 0;
+    padding: 0; 
 }
 
 #header h1 {
@@ -64,135 +82,88 @@ img {
     width:150px;
 }
 
+#navigation {
+    background: #112338 url("images/header-bar.png") repeat-x;
+    height: 60px;
+    vertical-align: middle;
+}
+
+#navigation.short {
+    height: 15px !important;
+}
+
+.holder {
+    padding-bottom: 1061px; /*footer height (plus 10px for text spacing)*//* look .holder*/  
+    margin-bottom: -1000px;
+}
+
+#center {
+    background: #fff;
+    display: inline;
+    margin-left: 20%;
+    overflow: hidden;
+    float: left;
+    width: 58%;
+    padding-top: .5em;
+}
+#content {
+    padding: 15px 15px 70px 15px;
+}
+
+#left{
+    float: left;
+    margin-left: -78%;
+    width: 20%;
+    background-color: #112338;
+}
+#leftsidebar {
+    margin: 0;
+    
+    padding: 8px;
+    background-color: #a1bfe2;
+}
+
+#leftsidebar .box ul {
+    padding-bottom: 1em;
+}
+
+#right {
+    float: left;
+    display: inline-block;
+    width:22%;
+    background-color: #112338;
+}
+#rightsidebar {
+    margin: 0;
+    padding: 8px;
+    background-color: #a1bfe2;
+}
+
+#rightsidebar .box ul {
+    padding-bottom: 1em;
+}
+
+
 #footer {
-    clear: both;
+    position:relative;/*stack footer above #content demo BG color*/
+    height: 100px;
     background: #1e3c62;
     border-width: 1px 0;
     border-style: solid;
     border-color: #070f19;
-    margin: 0;
-    padding: 10px 15px;
-}
 
+
+    margin:-101px auto 0; /*pull footer back into viewport and center*/
+}
 #footer td {
     vertical-align: middle;
 }
-
 #footer td.text {
     padding: 0 15px;
 }
-
 #footer td.text p {
     margin: 0;
     padding: 0;
-}
-
-#wrapper {
-    background: url("images/faux-column.png") repeat-y;
-    border-width: 1px 1px 0 0;
-    border-style: solid;
-    border-color: #112338;
-}
-
-#wrapper.wide {
-    background: #fff !important;
-}
-
-#content-header {
-    height: 55px;
-    display: table;
-    vertical-align: middle;
-}
-
-#content-header.short {
-    height: 15px !important;
-}
-
-#content {
-    padding: 15px 15px 70px 15px;
-    display: block;
-    float: right;
-    width: 730px;
-}
-
-#home-intro {
-    background: url("images/home-background.png") repeat-x;
-    height: 200px;
-    border-bottom: 1px solid #112338;
-}
-
-#home-intro-banner {
-    background: url("images/home-banner.png") no-repeat;
-    height: 200px;
-}
-
-#home-intro-buttons {
-    width: 279px;
-    height: 200px;
-    float: right;
-}
-
-#home-intro-buttons,
-#home-intro-buttons div {
-    padding: 0 !important;
-    margin: 0 !important;
-    line-height: 0 !important;
-}
-
-#content.wide {
-    background: #fff;
-    width: 938px !important;
-}
-
-#sidebar {
-    display: block;
-    padding: 0;
-    margin: 0;
-    float: left;
-    width: 200px;
-    padding: 8px;
-}
-
-#sidebar .box ul {
-    padding-bottom: 1em;
-}
-
-#search {
-    position: absolute;
-    right: 0;
-    top: 0;
-    margin-top: 1em;
-}
-
-#search input[type="text"],
-#search input.text {
-    font-size:.85em;
-    padding:4px;
-    -moz-border-radius:4px;
-    -khtml-border-radius:4px;    
-    -webkit-border-radius:4px;
-    border-radius:4px;
-    vertical-align:top;
-    background:url("images/search-background.png") repeat-x;
-    border:1px solid #0b1725;
-    margin-right:6px;
-    color:#c6d8ed;
-    float:left;
-    width:150px;
-}
-
-#search input.button {
-    font-size:.85em;
-    padding:2px;
-    -moz-border-radius:4px;
-    -khtml-border-radius:4px;    
-    -webkit-border-radius:4px;
-    border-radius:4px;
-    background: #0b1725;
-    border:1px solid #1e3c62;
-    color:#c6d8ed;
-    float:left;
-    display:none;
 }
 
 #footer-menu,
@@ -256,13 +227,50 @@ img {
 	font-size: 12px;
 }
 
+
+
+/*Searching*/
+#search {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-top: 1em;
+}
+
+#search input[type="text"],
+#search input.text {
+    font-size:.85em;
+    padding:4px;
+    -moz-border-radius:4px;
+    -khtml-border-radius:4px;    
+    -webkit-border-radius:4px;
+    border-radius:4px;
+    vertical-align:top;
+    background:url("images/search-background.png") repeat-x;
+    border:1px solid #0b1725;
+    margin-right:6px;
+    color:#c6d8ed;
+    float:left;
+    width:150px;
+}
+
+#search input.button {
+    font-size:.85em;
+    padding:2px;
+    -moz-border-radius:4px;
+    -khtml-border-radius:4px;    
+    -webkit-border-radius:4px;
+    border-radius:4px;
+    background: #0b1725;
+    border:1px solid #1e3c62;
+    color:#c6d8ed;
+    float:left;
+    display:none;
+}
+/* End Search */
 /* Language flags */
 div.i18n {
-	float: right;
-	position: relative;
-	z-index: 1;
-	height: 50px;
-	width: 200px;
+
 }
 
 div.i18n>ul {
@@ -294,6 +302,7 @@ div.i18n>ul li a {
 	color: black;
 	display: block;
 }
+/* End Language flags */
 
 /* css rule affecting the table found in the subprojects page */
 #content .node div table {
@@ -321,6 +330,7 @@ div.i18n>ul li a {
 #content .node div table td {
 	border: solid 1px;
 }
+/* end css rule affecting the table found in the subprojects page */
 
 /* css rule affecting the headings in the subprojects page */
 div .content h1 a {
@@ -330,3 +340,10 @@ div .content h1 a {
 div .content h1 a:hover {
 	text-decoration: underline;
 }
+/* end css rule affecting the headings in the subprojects page */
+
+/*Clearing floating elements*/
+.clear {
+	clear: both;
+}
+
