--- a/trunk/core/www/sites/default/themes/solidopt/css/layout.css
+++ b/trunk/core/www/sites/default/themes/solidopt/css/layout.css
@@ -1,16 +1,8 @@
-html, body {height:100%;}
-
 body {
     margin:0;
     padding:0;   
     background: #112338;
 }
-html>body #minHeight{ /* Opera and IE8 min-height fix */
-    float:left;
-    width:0;
-    height:100%;
-    overflow:hidden;
-} 
 
 img {
     border: none;
@@ -22,19 +14,14 @@ img {
     text-align: left;
     /*margin: 10px auto 0;*/
     padding: 0;
-/*    width: 980px !important;*/
-    
-    height: 100%;
+/*    width: 980px !important;*/    
     width: 100%;
 }
 
 #wrapper {
-    min-height:100%; /*height is determined from parent's height (html & body)*/
     margin:0 auto;
 
-    overflow:hidden;/*contain inner floats*/
 }
-* html #wrapper {height:100%; overflow:visible;}/*IE6 min-height & overflow reset*/
 
 #topmost {
     position: relative;
@@ -92,11 +79,6 @@ img {
     height: 15px !important;
 }
 
-.holder {
-    padding-bottom: 1061px; /*footer height (plus 10px for text spacing)*//* look .holder*/  
-    margin-bottom: -1000px;
-}
-
 #center {
     background: #fff;
     display: inline;
@@ -152,8 +134,6 @@ img {
     border-style: solid;
     border-color: #070f19;
 
-
-    margin:-101px auto 0; /*pull footer back into viewport and center*/
 }
 #footer td {
     vertical-align: middle;
@@ -227,7 +207,11 @@ img {
 	font-size: 12px;
 }
 
-
+/* Clear */
+.clear {
+	clear: both;
+}
+/* End Clear */
 
 /*Searching*/
 #search {
