--- a/trunk/core/www/sites/default/themes/solidopt/css/text.css
+++ b/trunk/core/www/sites/default/themes/solidopt/css/text.css
@@ -4,7 +4,7 @@ body {
     line-height: 1.5em;
 }
 
-#navigation h2 {
+/*#navigation h2 {
     font: 22px "Myriad", "Calibri", "DejaVu Sans", "Bitstream Vera Sans", Verdana, sans-serif !important;
     font-weight: bold !important;
     margin: 0 !important;
@@ -13,7 +13,7 @@ body {
     padding: 15px 0 0 10px !important;
     white-space: nowrap !important;
 }
-
+*/
 #content {
     color: #333;
 }
@@ -202,7 +202,7 @@ blockquote {
     font-size: 0.80em;
 }
 
-#rightsidebar h2 {
+#rightsidebar h2, #leftsidebar h2  {
     font-size: 1.3em;
     font-weight: bold;
     margin: 1.5em 0 .75em 0;
