--- a/trunk/core/www/sites/default/themes/solidopt/css/menu.css
+++ b/trunk/core/www/sites/default/themes/solidopt/css/menu.css
@@ -1,3 +1,44 @@
+/* Language menu */
+div.i18n {
+
+}
+
+div.i18n > ul {
+	float: right;
+	font-weight: normal;
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+	
+	margin: 0;
+	padding: 0;
+}
+
+div.i18n>ul li {
+	background-image: none;
+	border: medium none;
+	float: right;
+	
+	list-style-image: none;
+	list-style-position: outside;
+	list-style-type: none;
+
+	margin: 1px;
+	margin-right: 5px;
+	padding-left: 0;
+	padding-right: 0;
+
+	font-size: 0.9em;
+
+	white-space: nowrap;
+}
+div.i18n>ul li a {
+	display: block;
+
+	color: black;
+}
+/* End Language flags */
+
 /* Main menu (Tabs) */
 #block-menu-primary-links {
 	margin: 36px 0 0 0;
@@ -99,6 +140,36 @@ ul.imagemenu li {
 
 /*end Quick start menu*/
 
+/* Main column toolbar */
+
+#toolbar{	
+	background: #D3D3D3;
+	display: block;
+	width: 100%;
+	height: 32px;
+
+	
+	margin: 1em 0 1em 0;
+}
+
+#toolbar a {
+	line-height: 32px;
+}
+
+#toolbar a img{
+	vertical-align: middle;
+}
+
+#toolbar span{
+	float: right;
+}
+
+.print_html, .print_mail, .print_pdf, #toolbar span {
+	margin-left: 1em;
+}
+
+/* End Main column toolbar */
+
 /* SIDE MENU */
 #leftsidebar > div > div h2, #rightsidebar > div > div h2 {
     padding: 1em 0 0 1em;
@@ -136,43 +207,4 @@ ul.imagemenu li {
 }
 */
 
-/* Language menu */
-div.i18n {
-
-}
-
-div.i18n > ul {
-	float: right;
-	font-weight: normal;
-	list-style-image: none;
-	list-style-position: outside;
-	list-style-type: none;
-	
-	margin: 0;
-	padding: 0;
-}
-
-div.i18n>ul li {
-	background-image: none;
-	border: medium none;
-	float: right;
-	
-	list-style-image: none;
-	list-style-position: outside;
-	list-style-type: none;
-
-	margin: 1px;
-	margin-right: 5px;
-	padding-left: 0;
-	padding-right: 0;
-
-	font-size: 0.9em;
-	white-space: nowrap;
-}
-div.i18n>ul li a {
-	display: block;
-
-	color: black;
-}
-/* End Language flags */
 
