--- a/trunk/core/www/sites/default/themes/solidopt/css/layout.css
+++ b/trunk/core/www/sites/default/themes/solidopt/css/layout.css
@@ -1,6 +1,4 @@
 body {
-    background: #112338;
-
     margin:0;
     padding:0;   
 }
@@ -43,9 +41,6 @@ img {
     float: left;
 
     margin-top: 0.8em;
-
-    font-family: "Trebuchet MS";
-    color: #C6D8ED !important;
 }
 
 #logo a img {
@@ -76,9 +71,6 @@ img {
     border-radius:4px;
 
     padding:2px;
-
-    font-size:.85em;    
-    color:#c6d8ed;
 }
 
 #search input[type="text"],
@@ -92,13 +84,6 @@ img {
     -khtml-border-radius:4px;    
     -webkit-border-radius:4px;
     border-radius:4px;
-
-    vertical-align:top;
-    padding:4px;
-    margin-right:6px;
-
-    color:#c6d8ed;
-    font-size:.85em;
 }
 /* End Search */
 
@@ -172,6 +157,9 @@ img {
     width:22%;
 }
 
+#fcenter {
+	background-color: transparent;
+}
 
 #footer {
     background: #1e3c62;
@@ -183,10 +171,6 @@ img {
     float: left;
 
     margin-top: 10px;
-}
-
-#fcenter {
-	background-color: transparent;
 }
 
 /*
@@ -208,15 +192,6 @@ img {
 
 	padding: 2em 0;
 	
-}
-
-#footer-menu a {
-	font-weight: normal;
-	color: #A1BFE2;
-}
-
-#footer-menu a:hover {
-	color: #CE7B00;
 }
 
 #footer-menu ul {
@@ -253,32 +228,14 @@ img {
 
 	padding: 0 0 0.4em 0;
 	margin: 0;
-
-	font-weight: normal;
-	font-size: 85%;
-}
-
-#footer-menu li.first a {
-	font-weight: bold;
 }
 
 #message {
-	border-top: 1px solid #A1BFE2;
+	border-top: 1px solid #C8DAEE;
 
 	margin-top: 2em;
 	padding-top: 2em;	
 }
-
-#message p {
-	color: #A1BFE2;
-	
-	font-weight: normal;
-	font-size: 85%;	
-	text-align: center;
-	text-indent: 0;
-}
-
-
 
 .notes-line {
 	border-color: #CCCCBB -moz-use-text-color -moz-use-text-color;
@@ -300,37 +257,6 @@ img {
 	clear: both;
 }
 /* End Clear */
-
-/* Content specific*/
-
-
-/* css rule affecting the table found in the subprojects page */
-#content .node div table {
-	border: solid 1px gray;
-	background-color: rgb(249, 249, 249);
-	background-image: none;
-	background-repeat: repeat;
-	background-attachment: scroll;
-	background-position: 0% 50%;
-	-moz-background-size: auto auto;
-	border-collapse: collapse;
-	font-size: 95%;
-	-moz-background-clip: -moz-initial;
-	-moz-background-origin: -moz-initial;
-	-moz-background-inline-policy: -moz-initial;
-	width: 100%;
-	margin: 1em;
-}
-
-#content .node div table th {
-	border: solid 1px;
-	text-align: center;
-}
-
-#content .node div table td {
-	border: solid 1px;
-}
-/* end css rule affecting the table found in the subprojects page */
 
 /* css rule affecting the headings in the subprojects page */
 div .content h1 a {
@@ -366,10 +292,6 @@ div .content h1 a:hover {
 
 .book-navigation {
 	margin-top: 5em;
-}
-
-#user-login-form {
-	text-align: left;
 }
 
 /* End Override system styles */
