--- a/trunk/core/www/sites/default/themes/solidopt/css/layout.css
+++ b/trunk/core/www/sites/default/themes/solidopt/css/layout.css
@@ -34,6 +34,11 @@ img {
     padding: 0; 
 }
 
+#logo {
+    width: 100%;
+    position: relative;
+    float: left;
+}
 
 #logo a h1 {
     display: block;
@@ -54,7 +59,6 @@ img {
 /*Searching*/
 #search {
     position: absolute;
-    top: 100px;
     right: 5px;
   
     margin-top: 14px;
