apenev user modified. Extended user information added.

--- a/trunk/core/www/sites/default/themes/solidopt/css/layout.css
+++ b/trunk/core/www/sites/default/themes/solidopt/css/layout.css
@@ -279,13 +279,25 @@ div .content h1 a:hover {
 	margin: 0;
 }
 
+.profile .picture {
+	float: left;
+}
+
+.profile dl {
+	clear: both;
+	margin: 0;
+}
+
+.profile dd {
+	margin: 0 0 4em;
+}
+
+.profile-profile_cv p {
+	text-indent: 0;
+}
+
 .book-navigation {
 	margin-top: 5em;
 }
 
 /* End Override system styles */
-
-/* Test styles */
-
-
-/* End Test styles */
